<?xml version="1.0"?>
<package format="3">
  <name>ros_ads_node</name>
  <version>2.0.0</version>
  <description>The plc_control package</description>

  <author email="elvin.corbel@etu.univ-nantes.fr">elvin</author>
  <author email="alexis.fetet@capacites.fr">Alexis Fetet</author>
  <maintainer email="julien.viaud@capacites.fr">Julien Viaud</maintainer>
 
  <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <depend>std_msgs</depend>
  <depend>ros_ads_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
